# cloud-registry

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  Dockerfile  LICENSE  README.md  access_control.conf  docker-compose.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: checks.yaml
cloud_registry/: __init__.py  app.py  config.yaml  exceptions.py
cloud_registry/api/: 20201108.e0358db.openapi.yaml  additions.openapi.yaml
cloud_registry/ga4gh/registry/: server.py  service.py  service_info.py
cloud_registry/service_models/: custom_config.py
deployment/: Chart.yaml  README.md  values.yaml
deployment/templates/: cloud-registry-configmap-job.yaml  cloud-registry-deploy.yaml  cloud-registry-route.yaml  cloud-registry-service.yaml
docs/api/: conf.py  index.rst  requirements.txt
tests/: mock_data.py  test_utils.py  test_version.py
tests/ga4gh/registry/: test_server.py  test_service.py  test_service_info.py
